# modern-software-programming

./: .gitignore
week1/: chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: README.md  coding_agent_from_scratch_lecture.py  simple_mcp.py  writeup.md
week2/app/: db.py  main.py  schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract.py
week3/: README.md  pyproject.toml
week3/server/: config.py  connection.py  main.py
week3/server/tools/: accounts.py  budgets.py  categories.py  transactions.py
